--- a/MickeMultiLedMatrix/MickeMultiLedMatrix.vcxproj.filters
+++ b/MickeMultiLedMatrix/MickeMultiLedMatrix.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="__vm\.MickeMultiLedMatrix.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LedMatrixSymbols.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="LedMatrixSymbols.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
