--- a/MickeMultiLedMatrix/MickeMultiLedMatrix.vcxproj.filters
+++ b/MickeMultiLedMatrix/MickeMultiLedMatrix.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClInclude Include="LedMatrixSymbols.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LedMatrixSymbols.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
