--- a/MickeMultiLedMatrix/MickeMultiLedMatrix.vcxproj.filters
+++ b/MickeMultiLedMatrix/MickeMultiLedMatrix.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="__vm\.MickeMultiLedMatrix.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatrixSymbols.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
